samples/_failures_safe/1761563201_e4fbb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae465442.c: In function ‘main’:
./samples/SAFE/__tmp_ae465442.c:144:5: error: expected expression at end of input
  144 |     size_t compressed_size = compress_data(&params,
      |     ^~~~~~
./samples/SAFE/__tmp_ae465442.c:144:30: error: too few arguments to function ‘compress_data’
  144 |     size_t compressed_size = compress_data(&params,
      |                              ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ae465442.c:79:8: note: declared here
   79 | size_t compress_data(const struct compression_params *params, const uint8_t *input, size_t input_len, uint8_t *output, size_t output_len) {
      |        ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ae465442.c:144:5: error: expected declaration or statement at end of input
  144 |     size_t compressed_size = compress_data(&params,
      |     ^~~~~~
